--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 <div class="max-w-4xl mx-auto text-center mb-12">
                     <h2 class="text-3xl font-bold text-white">Meet the Roundtable</h2>
                     <p class="mt-2 text-lg text-gray-400">From Rutgers University Online Education Services (UOES)</p>
+                    <div class="mt-6 text-cyan-300">
+                        <p class="font-semibold">Tuesday, July 8, 2025 | 9:00am - 10:15am</p>
+                        <p>Cook Student Center, Multipurpose Room</p>
+                        <p>59 Biel Road, New Brunswick, NJ 08901</p>
+                    </div>
                 </div>
                 <div class="max-w-4xl mx-auto">
                    <img class="rounded-xl shadow-lg shadow-cyan-500/20" src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/roundtable.png" alt="A group photo of the roundtable speakers: Rick Anderson, Maka Gradin, and Kenny Chen">
