--- a/profiles.html
+++ b/profiles.html
@@ -72,7 +72,7 @@
         <div class="text-center mb-16">
             <h1 class="text-4xl md:text-5xl font-black tracking-tight text-cyan-400">Industry Profiles</h1>
             <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">
-                People from different backgrounds and with different approaches are what make games so great. Explore the profiles below to see how unique perspectives and skills—from science to art to journalism—are powerful assets in the world of game development.
+                What makes the world of gaming so great? It's the people from all different backgrounds who come together to create amazing experiences. Explore the profiles below to see how unique perspectives and skills—from science to art to journalism—are powerful assets in game development.
             </p>
         </div>
 
