--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         body {
             font-family: 'Inter', sans-serif;
         }
-        .hero-gradient {
-            background: radial-gradient(ellipse at bottom, #1e3a8a 0%, #172554 100%);
+        .hero-section {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png');
+            background-size: cover;
+            background-position: center;
         }
         .feature-card {
             background-color: rgba(30, 41, 59, 0.5);
@@ -69,10 +71,10 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero-gradient">
+        <section class="hero-section">
             <div class="container mx-auto px-6 py-24 md:py-32 text-center">
                 <h1 class="text-4xl md:text-6xl font-black tracking-tight leading-tight text-white">STEM <span class="text-cyan-400">+</span> Games</h1>
-                <p class="mt-4 text-xl md:text-2xl font-semibold text-gray-300">Level Up Your World.</p>
+                <p class="mt-4 text-xl md:text-2xl font-semibold text-gray-200">Level Up Your World.</p>
             </div>
         </section>
 
