--- a/showcase.html
+++ b/showcase.html
@@ -99,6 +99,14 @@
                         </div>
                         <div class="p-6 pt-0"><a href="https://firesquid.games/games/crab-god" target="_blank" class="game-link">Visit Website &rarr;</a></div>
                     </div>
+                    <div class="card-hover bg-gray-800 rounded-lg overflow-hidden flex flex-col">
+                        <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/empiric.webp" alt="Empiric Pediatrics Game" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e3a8a/ffffff?text=Empiric';">
+                        <div class="p-6 flex-grow card-content">
+                            <h3 class="text-xl font-bold text-white">Empiric Pediatrics</h3>
+                            <p class="mt-2 text-gray-400">A card game designed to teach medical students and residents about guideline-based antibiotic use in pediatric care.</p>
+                        </div>
+                        <div class="p-6 pt-0"><a href="https://www.mededportal.org/doi/10.15766/mep_2374-8265.11533" target="_blank" class="game-link">Learn More &rarr;</a></div>
+                    </div>
                 </div>
             </section>
 
@@ -136,7 +144,7 @@
                             <h3 class="text-xl font-bold text-white">Bloom: The Saga of the Fertilizer Economy</h3>
                             <p class="mt-2 text-gray-400">Dive into the complex world of modern agriculture. This game explores the economic and environmental impacts of fertilizer, challenging players to find a sustainable balance.</p>
                         </div>
-                        <div class="p-6 pt-0 collaboration-note"><a href="https://fielddaylab.wisc.edu/play/bloom/" target="_blank">Free to Play on the Web</a></div>
+                        <div class="p-6 pt-0 collaboration-note"><a href="https://fielddaylab.wisc.edu/play/bloom/" target="_blank">Play for Free on the Web</a></div>
                     </div>
                      <div class="card-hover bg-gray-800 rounded-lg overflow-hidden flex flex-col">
                         <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/arbor.jpg" alt="ARbor Trail Game" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/4d7c0f/ffffff?text=ARbor+Trail';">
@@ -165,7 +173,7 @@
                              <h3 class="text-xl font-bold text-white">Wake: Tales from the Aqualab</h3>
                             <p class="mt-2 text-gray-400">A physics-based puzzle game where you manipulate water in its different states (solid, liquid, gas) to solve challenges and learn about scientific principles.</p>
                         </div>
-                         <div class="p-6 pt-0 collaboration-note"><a href="https://fielddaylab.wisc.edu/play/wake/" target="_blank">Free to Play on the Web</a></div>
+                         <div class="p-6 pt-0 collaboration-note"><a href="https://fielddaylab.wisc.edu/play/wake/" target="_blank">Play for Free on the Web</a></div>
                     </div>
                     <div class="card-hover bg-gray-800 rounded-lg overflow-hidden flex flex-col">
                         <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/snails.webp" alt="Killer Snails Game" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/6366f1/ffffff?text=Killer+Snails';">
@@ -211,7 +219,7 @@
                             <h3 class="text-xl font-bold text-white">Verizon Learning Lab</h3>
                             <p class="mt-2 text-gray-400">An augmented reality app that brings learning to life. Explore everything from the human body to space exploration right in your own room.</p>
                         </div>
-                        <div class="p-6 pt-0 collaboration-note"><a href="https://www.verizon.com/learning/ar-vr-apps/Verizon-Innovative-Learning-Lab/28" target="_blank">Free to Play on the Web</a></div>
+                        <div class="p-6 pt-0 collaboration-note"><a href="https://www.verizon.com/learning/ar-vr-apps/Verizon-Innovative-Learning-Lab/28" target="_blank">Play for Free on the Web</a></div>
                     </div>
                     <div class="card-hover bg-gray-800 rounded-lg overflow-hidden flex flex-col">
                         <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/greenerhouse.jpg" alt="Greener House (Roblox)" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/10b981/ffffff?text=Greener+House';">
@@ -219,7 +227,7 @@
                             <h3 class="text-xl font-bold text-white">Greener House (Roblox)</h3>
                             <p class="mt-2 text-gray-400">Learn about sustainable living and green engineering by designing and maintaining an eco-friendly house within the popular Roblox platform.</p>
                         </div>
-                        <div class="p-6 pt-0 collaboration-note"><a href="https://www.roblox.com/games/14952020677/Greener-House-Beta" target="_blank">Free to Play on Roblox</a></div>
+                        <div class="p-6 pt-0 collaboration-note"><a href="https://www.roblox.com/games/14952020677/Greener-House-Beta" target="_blank">Play for Free on Roblox</a></div>
                     </div>
                 </div>
             </section>
@@ -234,7 +242,7 @@
                             <h3 class="text-xl font-bold text-white">Nuclear Negotiator</h3>
                             <p class="mt-2 text-gray-400">A serious game that puts you in the shoes of a diplomat. Navigate complex geopolitical situations and learn about nuclear policy and international relations.</p>
                         </div>
-                        <div class="p-6 pt-0 collaboration-note"><a href="https://nuclear-negotiator.co.uk/" target="_blank">Free to Play on the Web</a></div>
+                        <div class="p-6 pt-0 collaboration-note"><a href="https://nuclear-negotiator.co.uk/" target="_blank">Play for Free on the Web</a></div>
                     </div>
                 </div>
             </section>
