--- a/flyer-4up.html
+++ b/flyer-4up.html
@@ -48,13 +48,6 @@
             display: flex;
             flex-direction: column;
         }
-        .banner-image {
-            height: 1.25in;
-            background-image: url('https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png');
-            background-size: cover;
-            background-position: center;
-            border-radius: 0.25rem;
-        }
     </style>
 </head>
 <body>
@@ -67,7 +60,7 @@
         <!-- Flyer 1 -->
         <div class="flyer">
             <div class="flex flex-col h-full text-center">
-                <div class="banner-image"></div>
+                <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png" alt="STEM + Games Banner" class="w-full rounded-md object-cover" style="height: 1.25in;">
                 <h2 class="text-2xl font-black text-cyan-600 mt-4">Level Up Your World</h2>
                 <p class="text-sm text-gray-700 mt-2 flex-grow">
                     Ready to turn your passion for science and gaming into real-world impact? Explore our new site for 4-H STEM Ambassadors to discover your path, get inspired by amazing games, and access free tools to build your own project!
@@ -85,7 +78,7 @@
         <!-- Flyer 2 -->
         <div class="flyer">
             <div class="flex flex-col h-full text-center">
-                <div class="banner-image"></div>
+                <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png" alt="STEM + Games Banner" class="w-full rounded-md object-cover" style="height: 1.25in;">
                 <h2 class="text-2xl font-black text-cyan-600 mt-4">Level Up Your World</h2>
                 <p class="text-sm text-gray-700 mt-2 flex-grow">
                     Ready to turn your passion for science and gaming into real-world impact? Explore our new site for 4-H STEM Ambassadors to discover your path, get inspired by amazing games, and access free tools to build your own project!
@@ -103,7 +96,7 @@
         <!-- Flyer 3 -->
         <div class="flyer">
             <div class="flex flex-col h-full text-center">
-                <div class="banner-image"></div>
+                <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png" alt="STEM + Games Banner" class="w-full rounded-md object-cover" style="height: 1.25in;">
                 <h2 class="text-2xl font-black text-cyan-600 mt-4">Level Up Your World</h2>
                 <p class="text-sm text-gray-700 mt-2 flex-grow">
                     Ready to turn your passion for science and gaming into real-world impact? Explore our new site for 4-H STEM Ambassadors to discover your path, get inspired by amazing games, and access free tools to build your own project!
@@ -121,7 +114,7 @@
         <!-- Flyer 4 -->
         <div class="flyer">
             <div class="flex flex-col h-full text-center">
-                <div class="banner-image"></div>
+                <img src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/banner.png" alt="STEM + Games Banner" class="w-full rounded-md object-cover" style="height: 1.25in;">
                 <h2 class="text-2xl font-black text-cyan-600 mt-4">Level Up Your World</h2>
                 <p class="text-sm text-gray-700 mt-2 flex-grow">
                     Ready to turn your passion for science and gaming into real-world impact? Explore our new site for 4-H STEM Ambassadors to discover your path, get inspired by amazing games, and access free tools to build your own project!
