--- a/index.html
+++ b/index.html
@@ -78,38 +78,20 @@
             </div>
         </section>
 
-        <!-- Introduction Section -->
+        <!-- Welcome Section -->
         <section class="py-16 md:py-24 bg-gray-900">
             <div class="container mx-auto px-6">
                 <div class="max-w-4xl mx-auto text-center">
-                    <h2 class="text-3xl md:text-4xl font-bold text-white">Welcome, <span class="text-cyan-400">4-H STEM Ambassadors!</span></h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">Your Journey Starts Here</h2>
                     <p class="mt-4 text-lg text-gray-400">
-                        You are part of a generation of thinkers, creators, and problem-solvers. You already know the power of Science, Technology, Engineering, and Math. But what happens when you combine the rigor of STEM with the immersive, engaging power of video games? You get a force for incredible change.
+                        Welcome, 4-H STEM Ambassadors! You are part of a generation of thinkers, creators, and problem-solvers. This site is your headquarters for exploring the powerful connection between STEM and game development. Discover inspiring games, find your path with our interactive quest, and access the tools to build your own project that can change the world.
                     </p>
                 </div>
             </div>
         </section>
 
-        <!-- Meet the Roundtable Section -->
-        <section class="py-16 md:py-24 bg-gray-800/50">
-            <div class="container mx-auto px-6">
-                <div class="max-w-4xl mx-auto text-center mb-12">
-                    <h2 class="text-3xl font-bold text-white">Meet the Roundtable</h2>
-                    <p class="mt-2 text-lg text-gray-400">From Rutgers University Online Education Services (UOES)</p>
-                    <div class="mt-6 text-cyan-300">
-                        <p class="font-semibold">Tuesday, July 8, 2025 | 9:00am - 10:15am</p>
-                        <p>Cook Student Center, Multipurpose Room</p>
-                        <p>59 Biel Road, New Brunswick, NJ 08901</p>
-                    </div>
-                </div>
-                <div class="max-w-4xl mx-auto">
-                   <img class="rounded-xl shadow-lg shadow-cyan-500/20" src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/roundtable.png" alt="A group photo of the roundtable speakers: Rick Anderson, Maka Gradin, and Kenny Chen">
-                </div>
-            </div>
-        </section>
-
         <!-- Two-Column Section: STEM & Games -->
-        <section class="py-16 md:py-24 bg-gray-900">
+        <section class="py-16 md:py-24 bg-gray-800/50">
             <div class="container mx-auto px-6">
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- The Power of STEM -->
@@ -138,6 +120,26 @@
                            <a href="showcase.html" class="text-cyan-400 font-bold hover:underline">Check out the Game Showcase</a> to explore STEM through play, then get inspired to 
                            <a href="design.html" class="text-cyan-400 font-bold hover:underline">design your own game</a>!
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Events Section -->
+        <section class="py-16 md:py-24 bg-gray-900">
+            <div class="container mx-auto px-6">
+                <div class="max-w-4xl mx-auto text-center mb-12">
+                    <h2 class="text-3xl font-bold text-white">Events</h2>
+                </div>
+                <div class="bg-gray-800 rounded-xl p-8 max-w-4xl mx-auto text-center">
+                    <h3 class="text-2xl font-bold text-cyan-400">Roundtable with Rutgers UOES</h3>
+                    <div class="mt-4 text-gray-300">
+                        <p class="font-semibold">Tuesday, July 8, 2025 | 9:00am - 10:15am</p>
+                        <p>Cook Student Center, Multipurpose Room</p>
+                        <p>59 Biel Road, New Brunswick, NJ 08901</p>
+                    </div>
+                     <div class="mt-6">
+                        <img class="rounded-xl shadow-lg" src="https://raw.githubusercontent.com/RutgersGRID/4H-STEM-Games/main/assets/roundtable.png" alt="A group photo of the roundtable speakers: Rick Anderson, Maka Gradin, and Kenny Chen">
                     </div>
                 </div>
             </div>
